--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "require" : {
-    "facebook/graph-sdk" : "^5.4"
+    "facebook/graph-sdk" : "^5.4",
+    "elasticsearch/elasticsearch": "~5.0"  
   }
 }
